--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+#config
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/PatientInfo
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_ROOT_PASSWORD:PASSWORD123}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+springdoc.swagger-ui.doc-expansion=none
