--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/Pa
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_ROOT_PASSWORD:PASSWORD123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 springdoc.swagger-ui.doc-expansion=none
