--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 #config
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/PatientInfo
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/PatientInfo
+spring.datasource.url=jdbc:mysql://vm.cloud.cbh.kth.se:2776/PatientInfo
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_ROOT_PASSWORD:PASSWORD123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
 springdoc.swagger-ui.doc-expansion=none
 server.port=8081
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true 
