--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     image: user-service
     build:
       context: ./
-      dockerfile: DockerFile
+      dockerfile: Dockerfile
     ports:
       - 8081:8081
     environment:
