--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 #config
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/PatientInfo
 spring.datasource.url=jdbc:mysql://vm.cloud.cbh.kth.se:2776/PatientInfo
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_ROOT_PASSWORD:PASSWORD123}
+spring.datasource.username=root
+spring.datasource.password=PASSWORD123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 springdoc.swagger-ui.doc-expansion=none
 server.port=8081
@@ -13,4 +12,4 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true 
+spring.jpa.properties.hibernate.format_sql=true
