Added keycloak and KeycloakController
And many other stuffs.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=PASSWORD123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 springdoc.swagger-ui.doc-expansion=none
+
 server.port=8081
 
 spring.jpa.hibernate.ddl-auto=create
@@ -13,3 +14,9 @@ spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://key-cloak.app.cloud.cbh.kth.se/realms/HealthHarbor-Realm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+
+jwt.auth.converter.resource-id=user-service
+jwt.auth.converter.principle-attribute=preferred_username
