Added health check

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.r
 
 jwt.auth.converter.resource-id=user-service
 jwt.auth.converter.principle-attribute=preferred_username
+
+# Show details of health endpoint
+management.endpoint.health.show-details=always
