--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
 			<version>6.2.6.Final</version>
 		</dependency>
 
+		<!-- Actuator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
