--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>6.2.1</version>
+			<scope>test</scope>
+		</dependency>
+
 
 		<!-- Spring Security -->
 		<dependency>
